# ore

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  README.md  SECURITY.md  codama.json  localnet copy.sh  localnet.sh  package.json  pnpm-lock.yaml  rust-toolchain.toml
api/: Cargo.toml  idl.codama.json  idl.json
api/src/: consts.rs  error.rs  event.rs  instruction.rs  lib.rs  loaders.rs  sdk.rs
api/src/state/: automation.rs  block.rs  board.rs  bus.rs  commit.rs  config.rs  market.rs  migration.rs  miner.rs  mod.rs  permit.rs  proof.rs  proof_v2.rs  receipt.rs  round.rs  seeker.rs  square.rs  stake.rs  treasury.rs  vesting.rs  wager.rs
api/src/state/market/: buy_exact_in.rs  buy_exact_out.rs  curve.rs  fees.rs  market.rs  sell_exact_in.rs  sell_exact_out.rs  swap.rs  vaults.rs  virtual_limit_order.rs
changelog/: 2026-01-13-top-miner-verification.md
cli/: Cargo.toml
cli/src/: .env  main.rs
clients/js/: .eslintrc.cjs  .prettierrc.json  README.md  package.json  pnpm-lock.yaml  tsconfig.declarations.json  tsconfig.json  tsup.config.ts  typedoc.json
core/: README.md
core/api/: Cargo.toml
core/api/src/: consts.rs  event.rs  instruction.rs  lib.rs  utils.rs
core/api/src/state/: bus.rs  config.rs  mod.rs  treasury.rs
core/program/: Cargo.toml
core/program/src/: claim.rs  lib.rs  loaders.rs  update.rs
core/program/src/processor/: claim.rs  close.rs  crown.rs  initialize.rs  mine.rs  open.rs  reset.rs  stake.rs  update.rs  upgrade.rs
crates/api/: Cargo.toml
crates/api/src/: instruction.rs  lib.rs  utils.rs
crates/api/src/state/: bus.rs  hash.rs
crates/program/: Cargo.toml
crates/program/src/: instruction.rs  lib.rs  loaders.rs  utils.rs
crates/program/src/processor/: claim.rs  initialize.rs  mine.rs  mod.rs  register.rs  reset.rs  update_admin.rs  update_difficulty.rs
crates/program/src/state/: proof.rs
crates/program/tests/: test_initialize.rs  test_mine.rs  test_register.rs  test_reset.rs  test_update_admin.rs  test_update_difficulty.rs
idl/: ore.json
metadata/: Cargo.toml
metadata/src/: main.rs
ore/: README.md
ore-delegate/: README.md
ore-delegate/api/: Cargo.toml
ore-delegate/api/src/: consts.rs  event.rs  instruction.rs  sdk.rs
ore-delegate/api/src/state/: delegate.rs  mod.rs
ore-delegate/program/: Cargo.toml
ore-delegate/program/src/: crank.rs  deposit.rs  lib.rs  payout.rs  withdraw.rs
ore/api/src/: consts.rs  event.rs  instruction.rs  lib.rs  sdk.rs
ore/api/src/state/: block.rs  config.rs  miner.rs  mod.rs  permit.rs  stake.rs  treasury.rs
ore/api/src/state/market/: buy_exact_in.rs  buy_exact_out.rs  mod.rs
ore/program/: Cargo.toml
ore/program/src/: close.rs  commit.rs  decommit.rs  deposit.rs  lib.rs  mine.rs  open.rs  swap.rs  withdraw.rs
program/: Cargo.toml  build.rs
program/contract/: fpow.py  requirements.txt
program/src/: auth.rs  automate.rs  bet.rs  boost.rs  bury.rs  buy.rs  buyback.rs  checkpoint.rs  claim.rs  claim_algo.rs  claim_fpow.rs  claim_ore.rs  claim_seeker.rs  claim_sol.rs  claim_yield.rs  cleanup_migration.rs  close.rs  commit.rs  compound_yield  compound_yield.rs  crown.rs  declare_proof.rs  decommit.rs  deploy.rs  deposit.rs  free.rs  init_coal.rs  init_wood.rs  initialize.rs  initialize_square.rs  initialize_squares.rs  lib.rs  liq.rs  log.rs  migrate.rs  migrate_automation.rs  migrate_board.rs  migrate_miner.rs  migrate_miner_account.rs  migrate_squares.rs  (+39 more)
program/src/claim/: claim_coal.rs  claim_wood.rs  mod.rs
program/src/close/: close_coal.rs  close_wood.rs  mod.rs
program/src/mine/: chop_wood.rs  mine_coal.rs  mod.rs
program/src/reset/: mod.rs  reset_coal.rs  reset_wood.rs
program/src/stake/: mod.rs  stake_coal.rs  stake_wood.rs
program/src/update/: mod.rs  update_coal.rs  update_wood.rs
programs/ore/: Cargo.toml
programs/ore/src/: lib.rs
scripts/: generate-clients.mjs  generate-idls.mjs  utils.mjs
src/: builders.rs  consts.rs  entrypoint_nostd.rs  error.rs  instruction.rs  lib.rs  loaders.rs  utils.rs
src/processor/: claim.rs  close.rs  create_proof.rs  crown.rs  deregister.rs  epoch.rs  initialize.rs  mine.rs  mod.rs  open.rs  pause.rs  proof.rs  register.rs  reset.rs  stake.rs  update.rs  update_admin.rs  update_difficulty.rs  update_tolerance.rs  upgrade.rs
src/state/: bus.rs  config.rs  hash.rs  mod.rs  proof.rs  treasury.rs
tests/: test_epoch.rs  test_initialize.rs  test_mine.rs  test_register.rs  test_reset.rs  test_update_admin.rs  test_update_difficulty.rs
tests/buffers/: metadata_program.bpf
utils/: Cargo.toml
utils/src/: cpi.rs  lib.rs  loaders.rs  macros.rs  spl.rs  traits.rs
