[workspace]
resolver = "2"
members = ["api", "program", "cli"]

[workspace.package]
version = "3.7.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
description = "Solana native store of value."
documentation = "https://docs.rs/ore-api/latest/ore_api/"
repository = "https://github.com/regolith-labs/ore"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
const-crypto = "0.1.0"
entropy-api = "0.1.4"
entropy-types = "0.0.1"
mpl-token-metadata = "5.1"
num_enum = "0.7.2"
ore-api = { path = "./api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "^2.1"
solana-nostd-keccak = "0.1.3"
solana-program = "^2.1"
solana-client = "^2.1"
solana-sdk = "^2.1"
spl-pod = "=0.5.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-token-2022 = "^7"
spl-token-metadata-interface = "^0.6"
spl-associated-token-account = { version = "^6", features = [ "no-entrypoint" ] } 
steel = { features = ["spl"], version = "4.0.3" }
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["full"] }

[patch.crates-io]
# meteora-pools-sdk = { git = "https://github.com/regolith-labs/meteora-pools-sdk", branch = "master" }
# meteora-vault-sdk = { git = "https://github.com/regolith-labs/meteora-vault-sdk", branch = "master" }

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true