[workspace]
resolver = "2"
members = ["api", "program", "cli"]

[workspace.package]
version = "3.7.24"
edition = "2021"
license = "Apache-2.0"
homepage = "https://fpow.supply"
description = "Algorand native proof of work token."
documentation = "https://docs.rs/fpow-api/latest/fpow_api/"
repository = "https://github.com/Fry-Foundation/fPOW"
readme = "./README.md"
keywords = ["algorand"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
const-crypto = "0.1.0"
entropy-api = "0.1.4"
entropy-types = "0.0.1"
num_enum = "0.7.2"
fpow-api = { path = "./api" }
fpow-mint-api = "0.1.3"
solana-security-txt = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "^2.1"
solana-address-lookup-table-interface = { version = "=0.0.2", features = ["bincode"] }
solana-nostd-keccak = "0.1.3"
solana-program = "^2.1"
solana-client = "^2.1"
solana-sdk = "^2.1"
spl-pod = "=0.5.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-token-2022 = "^7"
spl-token-metadata-interface = "^0.6"
spl-associated-token-account = { version = "^6", features = [ "no-entrypoint" ] } 
steel = { features = ["spl"], version = "4.0.4" }
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true