[workspace]
resolver = "2"
members = ["api", "program", "cli"]

[workspace.package]
version = "3.7.24"
edition = "2021"
license = "Apache-2.0"
homepage = "https://fpow.supply"
description = "Algorand native proof of work token."
documentation = "https://docs.rs/fpow-api/latest/fpow_api/"
repository = "https://github.com/Fry-Foundation/fPOW"
readme = "./README.md"
keywords = ["algorand"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
const-crypto = "0.1.0"
num_enum = "0.7.2"
fpow-api = { path = "./api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["full"] }

# Algorand SDK dependencies
algonaut = "0.5"
algonaut_core = "0.5"
algonaut_client = "0.5"
algonaut_transaction = "0.5"
algonaut_crypto = "0.5"
algonaut_model = "0.5"
algonaut_encoding = "0.5"
sha2 = "0.10"
rand = "0.8"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true