[package]
name = "ore-api"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
base64.workspace = true
bytemuck.workspace = true
const-crypto.workspace = true
entropy-api.workspace = true
num_enum.workspace = true
serde.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-token-2022.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true
thiserror.workspace = true
