[package]
name = "fpow-api"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
base64.workspace = true
bytemuck.workspace = true
const-crypto.workspace = true
num_enum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Algorand dependencies
algonaut_core.workspace = true
algonaut_transaction.workspace = true
algonaut_crypto.workspace = true
algonaut_model.workspace = true
algonaut_encoding.workspace = true
sha2.workspace = true
