[package]
name = "ore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[features]
no-entrypoint = []
default = []

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck.workspace = true
meteora-pools-sdk.workspace = true
meteora-vault-sdk.workspace = true
ore-api = { path = "../api" }
serde_json = "1.0.140"
sha3 = "0.10.8"
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true
tokio.workspace = true
