[package]
name = "ore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[features]
no-entrypoint = []
default = []

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck.workspace = true
dirs = "6.0.0"
entropy-api.workspace = true
entropy-types.workspace = true
jup-swap = { git = "https://github.com/jup-ag/jupiter-swap-api-client", package = 'jupiter-swap-api-client', branch = '2.1' }
ore-api = { path = "../api" }
reqwest = { version = "0.11.24", default-features = false, features = ["json"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true
tokio.workspace = true
