[package]
name = "fpow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[features]
no-entrypoint = []
default = []

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
bytemuck.workspace = true
dirs = "6.0.0"
fpow-api = { path = "../api" }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

# Algorand dependencies
algonaut.workspace = true
algonaut_core.workspace = true
algonaut_client.workspace = true
algonaut_transaction.workspace = true
algonaut_crypto.workspace = true
algonaut_model.workspace = true
algonaut_encoding.workspace = true
rand.workspace = true
