[package]
name = "ore-metadata"
description = "API for interacting with the ORE program"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
ore-api = { path = "../api" }
mpl-token-metadata = "4.1.2"
solana-client = "^1.18"
solana-program = "^1.18"
solana-sdk = "^1.18"
