[package]
name = "ore-program"
description = "ORE is a proof-of-work token everyone can mine"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "ore"

[features]
default = []

[dependencies]
drillx.workspace = true
include-idl = { version = "^0", git = "https://github.com/nifty-oss/asset.git" }
mpl-token-metadata.workspace = true
ore-api.workspace = true
ore-boost-api.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
include-idl = { version = "^0", git = "https://github.com/nifty-oss/asset.git", features = ["shrink"] }
