[package]
name = "fpow-program"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# Note: The fPOW smart contract is written in PyTeal for Algorand
# This crate provides Rust utilities for contract interaction
# See program/contract/ for the PyTeal smart contract source

[lib]
crate-type = ["lib"]
name = "fpow"

[features]
default = []

[dependencies]
fpow-api.workspace = true
serde.workspace = true
serde_json.workspace = true
algonaut_core.workspace = true
algonaut_transaction.workspace = true
sha2.workspace = true
