[package]
name = "ore-api"
version = "1.0.0"
description = "API for the Ore program."
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
bs58 = "0.5.0"
bytemuck = "1.14.3"
mpl-token-metadata.workspace = true
num_enum = "0.7.2"
shank = "0.3.0"
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
static_assertions = "1.1.0"
thiserror = "1.0.57"
