[package]
name = "ore-delegate-program"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_delegate"

[features]
default = []

[dependencies]
bincode.workspace = true
mpl-token-metadata.workspace = true
ore-delegate-api.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-token-2022.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true

[dev-dependencies]
rand = "0.8.5"
