[package]
name = "ore"
version = "0.1.0"
description = "Ore is a cryptocurrency everyone can mine"
edition = "2021"
license = "Apache 2.0"
homepage = ""
repository = ""
documentation = ""
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "ore"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl =  { version = "0.29.0", features = ["token"] }
bincode = "1.3.3"
solana-program = "^1.16"
static_assertions = "1.1.0"

[dev-dependencies]
solana-program-test = "^1.16"
